# Mini-FileSystem

./: .gitignore  123.par  Block.cpp  Block.h  CMakeLists.txt  Estructura de mi File System.xlsx  FreeBlockBitMap.cpp  FreeBlockBitMap.h  INode.cpp  INode.h  Partition.cpp  Partition.h  Program.cpp  Program.h  README.md  SuperBlock.h  bitmap.cpp  bitmap.h  main.cpp  par.par  ~$Estructura de mi File System.xlsx
Debug/: 123.par  321.par  Proyecto_SO2  before.par  before_sleep.par  bf.par  masteblock.par  new.par  new2.par  newPartition.par  par.par  partinueva.par  partiti.par  partiti123.par  pas.par  test.par
Debug/Debug/: Proyecto_SO2  parti.fs  test.fs  test1.fs  test2.fs
